<resources>
    <string name="app_name">Trazar</string>
    <string name="comercio_nombre">Nombre Establecimiento/Sucursal</string>
    <string name="comercio_cuit">Cuit Establecimiento o Dni Responsable</string>
    <string name="comercio_domicilio">Domicilio del establecimiento</string>
    <string name="comercio_telefono">Telefono del responsable</string>
    <string name="comercio_usuario">Cuenta de reconocimiento del dispositivo</string>
    <string name="comercio_localidad">Localidad del establecimiento</string>
    <string name="Boton_guardar">Guardar configuración</string>
    <string name="cuit_establecimiento">CUIT Establecimiento o DNI del Titular</string>
    <string name="establecimiento_seleccion">Seleccione establecimiento</string>
    <string name="establecimiento_boton_crear">Crear Sucursal o Establecimiento</string>
    <string name="establecimiento_Seleccionar">Agregar mi dispositivo a este Establecimiento</string>
    <string name="este_telefono">Telefono de este dispositivo</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="comercio_responsable">Nombre del Responsable</string>
    <string name="comercio_permanencia">Minutos de Atención</string>
    <string name="boton_manual">Carga manual</string>
    <string name="Registro_visitas">Registro de visitas</string>
    <string name="main_dni">Nro de DNI</string>
    <string name="main_apellido">Apellido</string>
    <string name="main_nombres">Nombres</string>
    <string name="main_telefono">Teléfono</string>
    <string name="main_descripcion">Descripción</string>
    <string name="boton_solo_guardar">Guardar</string>
    <string name="TituloVisitas">Detalle de Visitas</string>
    <string name="btn_visitas">Detalle de Visitas</string>
    <string name="menu_establecimiento">Mi Establecimiento</string>
    <string name="estab_edit_title">Mi Establecimiento</string>
    <string name="estab_edit_telefono">Teléfono del Dispositivo</string>
    <string name="main_escanear">Escanear DNI</string>
    <string name="logo_trazar">Trazar</string>
    <string name="guardar">Guardar</string>
    <string name="usuario">Usuario:</string>
    <string name="lbl_ultima_sinc">Última Sincronización con Sistema Central de Trazabilidad Digital de Salud:</string>
    <string name="logosanluis">LogoSanLuis</string>
    <string name="logounsl">LogoUNSL</string>
    <string name="solo_registra_entradas">Solo registra Entradas</string>
    <string name="registra_entradas_y_salidas">Registra Entradas y Salidas</string>
    <string name="TextoBienvenido">Bienvenido a Trazar San Luis, complete los datos de su establecimiento para utilizar esta App. Para poder registrarse debe tener conexión a Internet.</string>
    <string name="politicas_de_privacidad">Políticas de Privacidad - Trazar San Luis</string>
</resources>