<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EstablecimientoEdit">

    <EditText
        android:id="@+id/edTelefonoEstab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/estab_edit_telefono"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/edDomicilio"
        app:layout_constraintStart_toStartOf="@+id/edDomicilio"
        app:layout_constraintTop_toBottomOf="@+id/edDomicilio"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edCuitDniResponsable"
        android:layout_width="341dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:enabled="false"
        android:hint="@string/comercio_cuit"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edNombreEstablecimiento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/comercio_nombre"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/edCuitDniResponsable"
        app:layout_constraintStart_toStartOf="@+id/edCuitDniResponsable"
        app:layout_constraintTop_toBottomOf="@+id/edCuitDniResponsable" />

    <EditText
        android:id="@+id/edDomicilio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/comercio_domicilio"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/edNombreEstablecimiento"
        app:layout_constraintStart_toStartOf="@+id/edNombreEstablecimiento"
        app:layout_constraintTop_toBottomOf="@+id/edNombreEstablecimiento"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/spLocalidad"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:hint="@string/comercio_localidad"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="@+id/edDomicilio"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edDomicilio"
        app:layout_constraintTop_toBottomOf="@+id/edTelefonoEstab" />


    <EditText
        android:id="@+id/edPermanencia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/comercio_permanencia"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/rbEntradaSalida"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rbEntradaSalida"
        app:layout_constraintTop_toBottomOf="@+id/rbEntradaSalida"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/rbEntradaSalida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/edTelefono"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edTelefono"
        app:layout_constraintTop_toBottomOf="@+id/edTelefono">

        <RadioButton
            android:id="@+id/Solo_Entradas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solo_registra_entradas"
            android:visibility="visible" />

        <RadioButton
            android:id="@+id/EntradasYSalidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registra_entradas_y_salidas"
            android:visibility="visible" />
    </RadioGroup>

    <EditText
        android:id="@+id/edTelefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/comercio_telefono"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/edNombreResponsable"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edNombreResponsable"
        app:layout_constraintTop_toBottomOf="@+id/edNombreResponsable"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Boton_guardar"
        app:layout_constraintEnd_toEndOf="@+id/edPermanencia"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/edPermanencia"
        app:layout_constraintTop_toBottomOf="@+id/edPermanencia" />

    <EditText
        android:id="@+id/edNombreResponsable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/comercio_responsable"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/spLocalidad"
        app:layout_constraintStart_toStartOf="@+id/spLocalidad"
        app:layout_constraintTop_toBottomOf="@+id/spLocalidad"
        android:autofillHints="" />

    <ProgressBar
        android:id="@+id/progressBarComercio"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#798A8787"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>